# DynamicIQ-COREx-Master

./: .dockerignore  .gitignore  .replit  Dockerfile  app.py  auth.py  bom_utils.py  models.py  mrp_logic.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  seed_capacity_data.py  seed_sample_data.py
attached_assets/: Pasted--1-Current-Situation-Assessment-Total-Work-Orders-WO-12_1766020966393.txt  Pasted--Accounting-Governance-Journal-Integrity-Prompt-Role-Re_1774569054057.txt  Pasted--Add-a-Market-Capability-Analysis-page-to-my-MRO-app-Functionality-1-Data-Integration-1762730652886_1762730652887.txt  Pasted--BUILD-PROMPT-Equipment-Preventive-Maintenance-EPM-Page_1774909817845.txt  Pasted--Create-a-fully-functional-Sales-Module-in-my-app-that-can-manage-all-types-of-sales-transactions-i-1759710535027_1759710535028.txt  Pasted--Dynamic-IQ-COREx-AI-Supplier-Discovery-Optimization-Pr_1772056408424.txt  Pasted--FUNCTIONAL-REQUIREMENTS-1-New-UI-Tab-Add-a-new-tab-to-_1774454963633.txt  Pasted--Purpose-To-establish-a-standardized-process-for-induct_1767365011358.txt  Pasted--REPLIT-AI-PROMPT-WORK-ORDER-RECONCILIATION-MODULE-Role_1767014025805.txt  Pasted--SYSTEM-DEVELOPER-PROMPT-Add-Automatic-Explainable-Work_1774470246501.txt  Pasted--SYSTEM-DEVELOPER-PROMPT-Real-Time-QuickBooks-Sync-for-_1774474268030.txt  Pasted--SYSTEM-PROMPT-Module-Name-ERP-Guide-Agent-Role-In-App-_1765969214899.txt  Pasted-AI-ERP-HELPER-SYSTEM-MASTER-PROMPT-ROLE-IDENTITY-You-ar_1765970033905.txt  Pasted-AI-SUPER-MASTER-SCHEDULER-MASTER-SCHEDULE-MODULE-PROMPT_1765972689993.txt  (+144 more)
(+491 files in other folders)
