[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "openai>=2.7.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "reportlab>=4.4.4",
    "werkzeug>=3.1.3",
]
