[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "openai>=2.7.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "sendgrid>=6.12.5",
    "sib-api-v3-sdk>=7.6.0",
    "werkzeug>=3.1.3",
]
